Added changes for cfg based on PASS criteria

--- a/ltp_config/ltp_tests.cfg
+++ b/ltp_config/ltp_tests.cfg
@@ -25,6 +25,22 @@ must-pass =
 [accept02]
 skip = yes
 
+# relies on shared mmap (see tst_test.c:setup_ipc)
+[accept4_01]
+skip = yes
+
+# utimensat
+[access01]
+skip = yes
+
+# utimensat
+[access02]
+skip = yes
+
+# tmpfs
+[access04]
+skip = yes
+
 # tmpfs
 [acct01]
 skip = yes
@@ -40,13 +56,6 @@ skip = yes
 # no adjtimex()
 [adjtimex*]
 skip = yes
-
-[bind01]
-must-pass =
-   1
-   2
-   3
-   4
 
 # getgrgid(user GID) fails with ENOENT
 [bind02]
@@ -97,6 +106,9 @@ skip = yes
 [chmod01A]
 skip = yes
 
+[chmod02]
+timeout = 40
+
 # getgrnam("bin") fails with ENOENT
 [chmod05]
 skip = yes
@@ -129,12 +141,9 @@ skip = yes
 [chroot01]
 skip = yes
 
+# no symlink()
 [chroot03]
-must-pass =
-    1
-    2
-    3
-    4
+skip = yes
 
 # hangs, no setuid(), rmdir() failing
 [chroot04]
@@ -148,6 +157,11 @@ skip = yes
 [clock_gettime03]
 skip = yes
 
+# this calls __vdso__clock_gettime(...) twice and checks if the
+# difference is <= 5 ms, which it might not be on a VM
+[clock_gettime04]
+skip = yes
+
 # test 10: EOPNOTSUPP expected on CLOCK_THREAD_CPUTIME_ID
 [clock_nanosleep01]
 timeout = 40
@@ -157,12 +171,19 @@ must-pass =
     3
     4
     5
+    6
+    7
     8
     9
     11
     12
     13
     14
+
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[clock_nanosleep02]
+skip = yes
 
 # kernel config
 [clock_nanosleep03]
@@ -174,7 +195,7 @@ skip = yes
 
 # Invokes clone() with CLONE_VM but without either of CLONE_THREAD or CLONE_VFORK, i.e., a process
 # sharing its parents address space. Gramine doesn't support this exotic model. Bug exposed by
-# https://github.com/oscarlab/Gramine/pull/1034.
+# https://github.com/gramineproject/graphene/pull/1034.
 [clone02]
 skip = yes
 
@@ -200,20 +221,6 @@ skip = yes
 [clone3*]
 skip = yes
 
-[close_range01]
-skip = yes
-
-[close_range02]
-must-pass =
-    1
-    2
-    3
-    4
-    5
-    6
-    7
-    8
-
 # opens /proc/sys/kernel/tainted
 [connect02]
 skip = yes
@@ -238,10 +245,6 @@ skip = yes
 [creat08]
 skip = yes
 
-# no setreuid()
-[creat09]
-skip = yes
-
 # no delete_module()
 [delete_module*]
 skip = yes
@@ -249,55 +252,21 @@ skip = yes
 [dirtyc0w]
 skip = yes
 
-[dirtyc0w_shmem]
-skip = yes
-
-[dirtypipe]
-skip = yes
-
-# complex test, not all of its checking is implemented in Gramine
+# very long test, does thousands of forks, unreliable
 [epoll01]
-timeout = 1200
-
-# adding an epoll to another epoll instance is not supported
-[epoll_ctl04]
 skip = yes
 
-# adding an epoll to another epoll instance is not supported
-[epoll_ctl05]
-skip = yes
-
-# segfault: uses sigprocmask and sends signals, broken in Gramine
+# tries to open /proc/1/stat, which is not implemented in Gramine
 [epoll_pwait01]
-must-pass =
-    1
+skip = yes
 
-[epoll_pwait02]
-must-pass =
-   1
-
-[epoll_pwait03]
-must-pass =
-   2
-   3
-   4
-   5
-   6
-   7
-
-[epoll_pwait04]
-must-pass =
-   1
-
-[epoll_pwait05]
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[epoll_wait02]
 skip = yes
 
 # test requires libaio
 [eventfd01]
-skip = yes
-
-# eventfd not allowed in manifest
-[eventfd2_*]
 skip = yes
 
 # error while loading libc.so.6
@@ -318,10 +287,6 @@ skip = yes
 
 # copy child
 [execve05]
-skip = yes
-
-# error while loading libc.so.6
-[execve06]
 skip = yes
 
 # execveat not implemented
@@ -403,26 +368,24 @@ skip = yes
 [fchmodat01]
 timeout = 40
 
+# 16-bit unsupported
 [fchown*_16]
 skip = yes
 
-[fchown02*]
+# fchown() does not clear setuid/setgid bits set on executable files
+[fchown02]
 skip = yes
 
-[fchown03*]
+# no seteuid()
+[fchown03]
 skip = yes
 
-[fchown04*]
+# requires using a device
+[fchown04]
 skip = yes
 
-[fchownat01]
-must-pass =
-    1
-    2
-    3
-    5
-
-[fchownat02]
+# no utimensat()
+[fchownat*]
 skip = yes
 
 [fcntl02_64]
@@ -443,21 +406,28 @@ skip = yes
 [fcntl07_64]
 skip = yes
 
-# no statfs()
+# test for locks, slow
 [fcntl14]
-timeout = 210
+timeout = 60
 
 [fcntl14_64]
-timeout = 210
+timeout = 60
 
-# no locks
+# depends on POSIX locks returning EINTR after signal, which we don't support
+[fcntl16]
+skip = yes
+
+[fcntl16_64]
+skip = yes
+
+# no deadlock detection for POSIX locks
 [fcntl17]
 skip = yes
 
 [fcntl17_64]
 skip = yes
 
-# no locks
+# test 3 uses setreuid()
 [fcntl18]
 must-pass =
     1
@@ -470,28 +440,28 @@ must-pass =
     2
     4
 
-# no statfs()
+# no F_SETLEASE
 [fcntl23]
 skip = yes
 
 [fcntl23_64]
 skip = yes
 
-# no statfs()
+# no F_SETLEASE
 [fcntl24]
 skip = yes
 
 [fcntl24_64]
 skip = yes
 
-# no statfs()
+# no F_SETLEASE
 [fcntl25]
 skip = yes
 
 [fcntl25_64]
 skip = yes
 
-# no statfs()
+# no F_SETLEASE
 [fcntl26]
 skip = yes
 
@@ -561,9 +531,6 @@ skip = yes
 [fcntl38_64]
 skip = yes
 
-[fcntl39*]
-skip = yes
-
 # 2. fdatasync() on /dev/null passes instead of failing with EINVAL
 [fdatasync02]
 must-pass =
@@ -573,15 +540,11 @@ must-pass =
 [fdatasync03]
 skip = yes
 
-# no fgetxattr(), tries to use mounts and utimensat
+# tries to use mounts and utimensat
 [fgetxattr*]
 skip = yes
 
-# TCONF: Failed to find module 'finit_module.ko'
-[finit_module*]
-skip = yes
-
-# no flistxattr()
+# requires fsetxattr
 [flistxattr*]
 skip = yes
 
@@ -593,20 +556,19 @@ skip = yes
 [fork05]
 skip = yes
 
+# performs 1,000 forks, which may be slow on ASan builds and wimpy VMs
 [fork06]
-timeout = 90
+timeout = 60
 
 # sometimes fails with "x/100 children didn't read correctly from an inheritted fd"
 [fork07]
-skip = yes
-
-[fork08]
 skip = yes
 
 # expect fd to share file offset in parent and child (unsupported)
 [fork10]
 skip = yes
 
+# opens /proc/sys/kernel/pid_max for writing
 [fork13]
 skip = yes
 
@@ -638,21 +600,12 @@ skip = yes
 [fspick*]
 skip = yes
 
+# creates a file with 0644, but fstat() returns 0600
 [fstat02]
-must-pass =
-   1
-   2
-   3
-   4
-   5
+skip = yes
 
 [fstat02_64]
-must-pass =
-   1
-   2
-   3
-   4
-   5
+skip = yes
 
 # tries to mount a filesystem
 [fsync01]
@@ -662,9 +615,6 @@ skip = yes
 [fsync02]
 timeout = 120
 
-# 1. fsync() on a pipe returns EROFS, not EINVAL
-# 2. fsync() on a socket returns EROFS, not EINVAL
-# 5. fsync() on a fifo returns EROFS, not EINVAL
 [fsync03]
 timeout = 40
 
@@ -687,11 +637,13 @@ skip = yes
 [futex_wait02]
 skip = yes
 
-# flaky, see https://github.com/oscarlab/Gramine/pull/180#issuecomment-368970338.
+# flaky, see https://github.com/gramineproject/graphene/pull/180#issuecomment-368970338.
 [futex_wait03]
 skip = yes
 
-[futex_waitv*]
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[futex_wait05]
 skip = yes
 
 # opens /proc/2/task
@@ -714,14 +666,16 @@ skip = yes
 [get_mempolicy*]
 skip = yes
 
-# opens /proc/sys/kernel/pid_max
+# tries to get robust futex list of pid 1 in subtest 5 (expects failure but succeeds because Gramine
+# starts pids with 1)
 [get_robust_list01]
-must-pass = 
+must-pass =
     1
     2
     3
     4
 
+# no symlink()
 [getcwd03]
 skip = yes
 
@@ -729,6 +683,13 @@ skip = yes
 [getcwd04]
 must-pass =
     2
+
+# no symlink()
+[getdents01]
+skip = yes
+
+[getdents01_64]
+skip = yes
 
 # tries to open /etc/hosts
 [getdtablesize01]
@@ -757,10 +718,7 @@ skip = yes
 
 # only ITIMER_REAL is supported
 [getitimer01]
-must-pass =
-    1
-    3
-    5
+skip = yes
 
 # only ITIMER_REAL is supported
 [getitimer03]
@@ -774,16 +732,9 @@ must-pass =
     1
     2
 
-# opens /proc/sys/kernel/pid_max
+# don't support getting pgid of children processes
 [getpgid02]
 skip = yes
-
-[getpid01]
-timeout = 60
-
-[getpid02]
-must-pass =
-    1
 
 # getpriority() has a dummy implementation that always returns the same value
 [getpriority02]
@@ -809,16 +760,8 @@ skip = yes
 [getuid*_16]
 skip = yes
 
-[getuid03]
-must-pass =
-   1
-
-# no getxattr()
+# requires setxattr
 [getxattr*]
-skip = yes
-
-# Failed to find module 'init_module.ko
-[init_module*]
 skip = yes
 
 # no inotify()
@@ -929,16 +872,20 @@ skip = yes
 [kill05]
 skip = yes
 
+# process groups unsupported
+[kill06]
+skip = yes
+
 # no shmget()
 [kill07]
 skip = yes
 
 # process groups unsupported
-[kill10]
+[kill08]
 skip = yes
 
-# CONFIG_UBSAN_SIGNED_OVERFLOW Undefined
-[kill13]
+# process groups unsupported
+[kill10]
 skip = yes
 
 # no lchown()
@@ -949,7 +896,7 @@ skip = yes
 [leapsec01]
 skip = yes
 
-# no lgetxattr()
+# requires lsetxattr
 [lgetxattr*]
 skip = yes
 
@@ -986,18 +933,17 @@ must-pass =
     1
     2
 
-# no listxattr()
+# requires setxattr
 [listxattr*]
 skip = yes
 
-# no llistxattr()
+# requires lsetxattr and symlink
 [llistxattr*]
 skip = yes
 
 # tries to set RLIMIT_FSIZE and write past file size limit
 [llseek01]
-must-pass =
-    1
+skip = yes
 
 # no lremovexattr()
 [lremovexattr*]
@@ -1052,13 +998,6 @@ skip = yes
 [madvise10]
 skip = yes
 
-[madvise11]
-skip = yes
-
-# TCONF: system doesn't implement non-POSIX mallinfo2()
-[mallinfo2_01]
-skip = yes
-
 # tests require libnuma
 [mbind*]
 skip = yes
@@ -1093,7 +1032,13 @@ skip = yes
 [mkdir04]
 skip = yes
 
+[mkdir05]
+skip = yes
+
 [mkdir05A]
+skip = yes
+
+[mkdir09]
 skip = yes
 
 [mkdirat02]
@@ -1134,23 +1079,34 @@ skip = yes
 [mknodat02]
 skip = yes
 
+[mlock01]
+skip = yes
+
 [mlock02]
+skip = yes
+
+[mlock04]
 skip = yes
 
 [mlock201]
 skip = yes
 
 [mlock202]
-must-pass =
-    1
+skip = yes
 
 [mlock203]
+skip = yes
+
+[mlockall01]
 skip = yes
 
 [mlockall02]
 skip = yes
 
 [mlockall03]
+skip = yes
+
+[mmap01]
 skip = yes
 
 [mmap12]
@@ -1162,11 +1118,13 @@ skip = yes
 [mmap16]
 skip = yes
 
+# kernel 4.17 or newer
+[mmap17]
+skip = yes
+
 # should fail when growing the stack over a guard page
 [mmap18]
-must-pass =
-    3
-    4
+skip = yes
 
 [modify_ldt01]
 skip = yes
@@ -1195,12 +1153,6 @@ skip = yes
 [mount06]
 skip = yes
 
-[mount07]
-skip = yes
-
-[mount_setattr01]
-skip = yes
-
 # no move_mount()
 [move_mount*]
 skip = yes
@@ -1217,9 +1169,6 @@ must-pass =
 skip = yes
 
 [mq_notify02]
-skip = yes
-
-[mq_notify03]
 skip = yes
 
 [mq_open01]
@@ -1277,23 +1226,30 @@ skip = yes
 [msync02]
 skip = yes
 
-# 1st sub-tests fails with MS_INVALIDATE
+# 2 sub-tests fail with MS_INVALIDATE and MS_SYNC unsupported flag
 [msync03]
 must-pass =
     2
     3
     4
     5
-    6
 
-# uses mountpoint
+# uses MS_SYNC flag which is not supported in Gramine
 [msync04]
+skip = yes
+
+[munlock01]
 skip = yes
 
 [munlock02]
 skip = yes
 
-[name_to_handle_at*]
+[munlockall01]
+skip = yes
+
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[nanosleep01]
 skip = yes
 
 [nftw01]
@@ -1314,16 +1270,17 @@ skip = yes
 [nice04]
 skip = yes
 
-[nice05]
+# Requires sticky bit support
+[open01]
 skip = yes
 
 # Requires symlinks support
 [open01A]
 skip = yes
 
+# Checks access/modification time, which we don't emulate currently
 [open02]
-must-pass =
-   1
+skip = yes
 
 # Requires seteuid() support
 [open05]
@@ -1352,19 +1309,19 @@ must-pass =
 skip = yes
 
 # Uses /proc/mounts
+[open11]
+skip = yes
+
+# Uses /proc/mounts
 [open12]
 skip = yes
 
+# Requires `utime*` syscall support
 [open13]
-must-pass =
-    1
-    2
+skip = yes
 
 # Requires O_TMPFILE support
 [open14]
-skip = yes
-
-[open_by_handle_at*]
 skip = yes
 
 # no open_tree()
@@ -1379,10 +1336,6 @@ skip = yes
 [openat03]
 skip = yes
 
-# Requires O_TMPFILE and symlink() support
-[openat04]
-skip = yes
-
 # no openat2()
 [openat2*]
 skip = yes
@@ -1391,25 +1344,24 @@ skip = yes
 [pause01]
 skip = yes
 
-# not supported in Gramine
+# opens "/proc/pid/stat", which is not supported in Gramine
 [pause02]
 skip = yes
 
-# not supported in Gramine
+# opens "/proc/pid/stat", which is not supported in Gramine
 [pause03]
 skip = yes
 
-[perf_event_open0*]
+[perf_event_open01]
+skip = yes
+
+[perf_event_open02]
 skip = yes
 
 [personality01]
 skip = yes
 
 [personality02]
-skip = yes
-
-# no pidfd_open()
-[pidfd_getfd*]
 skip = yes
 
 # no pidfd_open()
@@ -1422,6 +1374,12 @@ skip = yes
 
 [pipe02]
 skip = yes
+
+[pipe03]
+skip = yes
+
+[pipe04]
+timeout = 60
 
 [pipe07]
 skip = yes
@@ -1438,7 +1396,10 @@ skip = yes
 [pipe13]
 skip = yes
 
-# fails to set O_NONBLOCK by using pipe2(fds, O_NONBLOCK)
+[pipe2_02]
+skip = yes
+
+# requires support for F_SETPIPE_SZ in fcntl
 [pipe2_04]
 skip = yes
 
@@ -1447,6 +1408,11 @@ skip = yes
 
 # no pkey_alloc()
 [pkey*]
+skip = yes
+
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[poll02]
 skip = yes
 
 [posix_fadvise01]
@@ -1472,27 +1438,6 @@ skip = yes
 
 [posix_fadvise04_64]
 skip = yes
-
-[ppoll01]
-must-pass =
-    1
-    2
-    3
-    4
-    5
-    6
-    7
-    9
-    10
-    11
-    12
-    13
-    14
-    15
-    16
-    17
-    19
-    20
 
 [prctl01]
 skip = yes
@@ -1526,9 +1471,6 @@ skip = yes
 
 # no PR_TIMER_SETSLACK
 [prctl09]
-skip = yes
-
-[prctl10]
 skip = yes
 
 [pread01]
@@ -1597,6 +1539,16 @@ skip = yes
 skip = yes
 
 [prot_hsymlinks]
+skip = yes
+
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[pselect01]
+skip = yes
+
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
+[pselect01_64]
 skip = yes
 
 # no ptrace()
@@ -1669,9 +1621,10 @@ skip = yes
 skip = yes
 
 [readlinkat01]
-must-pass =
-    3
-    4
+skip = yes
+
+[readlinkat02]
+skip = yes
 
 [realpath01]
 skip = yes
@@ -1726,22 +1679,17 @@ skip = yes
 [removexattr02]
 skip = yes
 
-# st_ino is generated randomly
 [rename01]
-must-pass =
-   1
-   2
-   4
+skip = yes
 
 [rename01A]
 skip = yes
 
-# st_ino is generated randomly
+[rename02]
+skip = yes
+
 [rename03]
-must-pass =
-   1
-   2
-   4
+skip = yes
 
 [rename04]
 skip = yes
@@ -1755,7 +1703,13 @@ skip = yes
 [rename07]
 skip = yes
 
+[rename08]
+skip = yes
+
 [rename09]
+skip = yes
+
+[rename10]
 skip = yes
 
 [rename11]
@@ -1833,28 +1787,6 @@ skip = yes
 [sbrk03]
 skip = yes
 
-[sched_get_priority_max01]
-must-pass =
-   1
-   3
-   4
-   5
-   6
-
-[sched_get_priority_min01]
-must-pass =
-   1
-   3
-   4
-   5
-   6
-
-[sched_getaffinity01]
-must-pass =
-    1
-    2
-    3
-
 [sched_getattr01]
 skip = yes
 
@@ -1885,8 +1817,9 @@ skip = yes
 [sched_rr_get_interval03]
 skip = yes
 
+# no seteuid() for subtest 4
 [sched_setaffinity01]
-must-pass = 
+must-pass =
     1
     2
     3
@@ -1918,12 +1851,11 @@ skip = yes
 [sched_setscheduler03]
 skip = yes
 
-[select03]
-must-pass = 
-   1
-
+# Relies on shared mmap (see tst_test.c:setup_ipc).
+# Requires disabling C-states through /dev/cpu_dma_latency to work reliably. See
+# https://github.com/linux-test-project/ltp/issues/862.
 [select04]
-timeout = 60
+skip = yes
 
 [semctl*]
 skip = yes
@@ -1934,6 +1866,7 @@ skip = yes
 [semop*]
 skip = yes
 
+# MSG_MORE flag to send() not supported
 [send02]
 skip = yes
 
@@ -1951,7 +1884,7 @@ timeout = 60
 [sendfile09_64]
 timeout = 60
 
-# EINVAL from native sendmsg()
+# uses recvmmsg(timeout) but timeout is unsupported in Gramine
 [sendmmsg01]
 skip = yes
 
@@ -2037,7 +1970,13 @@ skip = yes
 [setgid01_16]
 skip = yes
 
+[setgid02]
+skip = yes
+
 [setgid02_16]
+skip = yes
+
+[setgid03]
 skip = yes
 
 [setgid03_16]
@@ -2072,10 +2011,12 @@ skip = yes
 [setns02]
 skip = yes
 
+# don't support setting pgid of children processes
 [setpgid02]
-must-pass = 
+must-pass =
     1
 
+# don't support setting pgid of children processes
 [setpgid03]
 skip = yes
 
@@ -2114,6 +2055,9 @@ must-pass =
 [setrlimit03]
 must-pass =
     2
+
+[setrlimit04]
+skip = yes
 
 [setrlimit06]
 skip = yes
@@ -2161,14 +2105,6 @@ skip = yes
 [setsockopt07]
 skip = yes
 
-# kernel config
-[setsockopt08]
-skip = yes
-
-# kernel config
-[setsockopt09]
-skip = yes
-
 # no clock_settime()
 [settimeofday01]
 skip = yes
@@ -2181,6 +2117,9 @@ skip = yes
 timeout = 40
 
 [setuid01_16]
+skip = yes
+
+[setuid03]
 skip = yes
 
 [setuid03_16]
@@ -2226,6 +2165,7 @@ timeout = 40
 [sighold02]
 skip = yes
 
+# tries to open /proc/5/stat, which is not implemented in Gramine
 [signal01]
 skip = yes
 
@@ -2241,6 +2181,10 @@ skip = yes
 skip = yes
 
 [signalfd4_02]
+skip = yes
+
+# relies on shared mmap (see tst_test.c:setup_ipc)
+[sigpending02]
 skip = yes
 
 # subtest 3: UNIX datagram sockets not supported
@@ -2270,6 +2214,7 @@ must-pass =
     5
     6
 
+# subtests 3-4,6-8: ioctl commands SIOCATMARK and SIOCGIFFLAGS not supported
 [sockioctl01]
 must-pass =
     1
@@ -2284,16 +2229,10 @@ skip = yes
 skip = yes
 
 [stat03]
-must-pass =
-   2
-   3
-   4
+skip = yes
 
 [stat03_64]
-must-pass =
-   2
-   3
-   4
+skip = yes
 
 [stat04]
 skip = yes
@@ -2303,21 +2242,11 @@ skip = yes
 
 # no symlink()
 [statfs02]
-must-pass =
-    1
-    2
-    3
-    4
-    5
+skip = yes
 
 # no symlink()
 [statfs02_64]
-must-pass =
-    1
-    2
-    3
-    4
-    5
+skip = yes
 
 [statfs03]
 skip = yes
@@ -2325,20 +2254,29 @@ skip = yes
 [statfs03_64]
 skip = yes
 
-[statvfs01]
-must-pass =
-    1
-    3
-
 # no symlink()
 [statvfs02]
-must-pass =
-    1
-    3
-    4
-    5
+skip = yes
 
-[statx0*]
+[statx01]
+skip = yes
+
+[statx02]
+skip = yes
+
+[statx03]
+skip = yes
+
+[statx04]
+skip = yes
+
+[statx05]
+skip = yes
+
+[statx06]
+skip = yes
+
+[statx07]
 skip = yes
 
 [stime01]
@@ -2537,14 +2475,13 @@ must-pass =
 skip = yes
 
 [unlink05]
-must-pass = 
-    1
+skip = yes
+
+[unlink07]
+skip = yes
 
 [unlink08]
-must-pass =
-   2
-   3
-   4
+skip = yes
 
 [unshare01]
 skip = yes
@@ -2609,29 +2546,8 @@ must-pass =
     2
     3
 
-[wait403]
-skip = yes
-
 # Not supported: waitid with WSTOPPED and WCONTINUED
 [waitid02]
-skip = yes
-
-[waitid04]
-must-pass =
-   1
-   2
-
-# Currently Gramine do not support getting pgid of other processes
-[waitid05]
-must-pass =
-   1
-
-# Not supported: waitid with WSTOPPED
-[waitid07]
-skip = yes
-
-# Not supported: waitid with WSTOPPED and WCONTINUED
-[waitid08]
 skip = yes
 
 # uses futexes on memory shared between processes - unsupported
@@ -2671,11 +2587,3 @@ timeout = 40
 
 [write04]
 skip = yes
-
-# Requires O_APPEND flag
-[write06]
-skip = yes
-
-[writev03]
-timeout = 90
-
